components/my-mew-app-devfile-sample-ymzw-sample/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: my-mew-app
    appstudio.openshift.io/component: my-mew-app-devfile-sample-ymzw-sample
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elmy-mew-app-devfile-sample-ymzw-sample
  namespace: alexeykazakov
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-my-mew-app-devfile-sample-ymzw-sample
    weight: null
status: {}
